# WLKATA_US

./: LICENSE  README.md  main.py  pyproject.toml  rgbMap.json
utils/: captureImages.py  checkAreaAndAngle.py  checkObject.py  getBurnedState.py  pickBadAndPlace.py
utils/niche/: analyze_images.py  convZero.py  home.py
