[project]
name = "wlkata-us"
version = "1.0.0"
description = "An intelligent computer vision system for automated biscuit detection and quality assessment using OpenCV and Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "tk-tools>=0.17.0",
    "wlkatapython>=0.1.0",
]
